--- a/locks-portofolio/package.json
+++ b/locks-portofolio/package.json
@@ -9,9 +9,11 @@
     "firebase": "8.8.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-router-dom": "5.x",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.1.0",
+    "styled-components": "^5.3.3",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
