--- a/locks-portofolio/package.json
+++ b/locks-portofolio/package.json
@@ -6,15 +6,20 @@
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
+    "add": "^2.0.6",
+    "bootstrap": "5.1.3",
     "firebase": "8.8.1",
     "react": "^17.0.2",
+    "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "5.x",
     "react-scripts": "5.0.0",
     "react-toastify": "^8.1.0",
+    "sass": "^1.49.7",
     "styled-components": "^5.3.3",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "yarn": "^1.22.17"
   },
   "scripts": {
     "start": "react-scripts start",
