--- a/locks-portofolio/package.json
+++ b/locks-portofolio/package.json
@@ -2,6 +2,7 @@
   "name": "locks-portofolio",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://makak.com.br/lucas-toffoli/",
   "dependencies": {
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
@@ -10,13 +11,14 @@
     "bootstrap": "5.1.3",
     "firebase": "8.8.1",
     "react": "^17.0.2",
-    "react-bootstrap": "^2.1.2",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "5.x",
     "react-scripts": "5.0.0",
+    "react-slick": "^0.28.1",
     "react-toastify": "^8.1.0",
     "sass": "^1.49.7",
+    "slick-carousel": "^1.8.1",
     "styled-components": "^5.3.3",
     "web-vitals": "^2.1.0",
     "yarn": "^1.22.17"
