--- a/locks-portofolio/package.json
+++ b/locks-portofolio/package.json
@@ -4,16 +4,22 @@
   "private": true,
   "homepage": "https://makak.com.br/lucas-toffoli/",
   "dependencies": {
+    "@emailjs/browser": "^3.4.0",
     "@testing-library/jest-dom": "^5.14.1",
     "@testing-library/react": "^12.0.0",
     "@testing-library/user-event": "^13.2.1",
     "add": "^2.0.6",
     "bootstrap": "5.1.3",
     "firebase": "8.8.1",
+    "i18next": "^21.6.14",
+    "i18next-browser-languagedetector": "^6.1.3",
+    "i18next-http-backend": "^1.4.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.15.7",
     "react-icons": "^4.3.1",
     "react-router-dom": "5.x",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.0",
     "react-slick": "^0.28.1",
     "react-toastify": "^8.1.0",
