--- a/locks-portofolio/package.json
+++ b/locks-portofolio/package.json
@@ -15,7 +15,9 @@
     "i18next-browser-languagedetector": "^6.1.3",
     "i18next-http-backend": "^1.4.0",
     "react": "^17.0.2",
+    "react-cookie": "^4.1.1",
     "react-dom": "^17.0.2",
+    "react-flag-icon-css": "^1.0.25",
     "react-i18next": "^11.15.7",
     "react-icons": "^4.3.1",
     "react-router-dom": "5.x",
